// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inputs Checkbox should match snapshot for checked 1`] = `
<Component
  aria-checked={true}
  id="test"
  role="checkbox"
>
  <Component />
</Component>
`;

exports[`Inputs Checkbox should match snapshot for disabled 1`] = `
<Component
  disabled={true}
  id="test"
  role="checkbox"
>
  <Component />
</Component>
`;

exports[`Inputs Checkbox should match snapshot for unchecked 1`] = `
<Component
  id="test"
  role="checkbox"
>
  <Component />
</Component>
`;

exports[`Inputs NumericInput should match snapshot 1`] = `
<input
  className="numeric-input"
  type="number"
  value={1}
/>
`;
